clang/test/BSC/Negative/Trait/r1/definition_17/definition_17.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This* this);
};

_Trait F* get() {
  int a = 1;
  return &a; // expected-error {{expected a pointer type which has implemented '_Trait F', found 'int'}}
};

int main() {
  _Trait F* f = get();
  return 0;
}
